Fix members not showing when banInfoDocument doesn't exist

--- a/style.css
+++ b/style.css
@@ -788,6 +788,10 @@ img.aboutLogo {
     display: unset;
 }
 
+.loadedTrendingGroups {
+    display: none;
+}
+
 .userIsMe {
     display: none;
 }
